# python-lab-shell

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: config.py  constants.py  errors.py  main.py  parser.py  power.py  setup_logger.py
src/commands/: archive_commands.py  cat.py  cd.py  cp.py  grep.py  ls.py  mv.py  rm.py
tests/: conftest.py  test_archive_commands.py  test_cat.py  test_cd.py  test_cp.py  test_errors.py  test_grep.py  test_ls.py  test_mv.py  test_parser.py  test_rm.py
