[project]
name = "console-app-with-logging"
version = "0.1.0"
description = "supporting commands: ls, cd, cat, cp, mv, rm, zip, unzip, tar, untar, grep"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[[tool.mypy.overrides]]
module = ["pyfakefs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true
